k8s/dep-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-nginx-sae5-x21
  namespace: ns-sae5-x21
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
        - name: nginx-sae5-x21
          image: $CI_REGISTRY/$CI_PROJET/nginx
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "\"cd", "/app/sfapi", "&&", "composer", "install", "-n", "&&", "chmod", "744", "/app/sfapi/", "-R\""]
      imagePullSecrets:
        - name: gitlab-auth
