k8s/dep-sfapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-sfapi-sae5-x21
  namespace: ns-sae5-x21
spec:
  replicas: 1
  selector:
    matchLabels:
      component: sfapi
  template:
    metadata:
      labels:
        component: sfapi
    spec:
      containers:
        - name: sfapi-sae5-x21
          image: $CI_REGISTRY/$CI_PROJET/$DOCKER_IMAGE_TAG
          ports:
            - containerPort: 9000
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - >
                    cd /app/sfapi && composer install -n
                    chmod 744 /app/sfapi -R
      imagePullSecrets:
        - name: gitlab-auth
