k8s/svc-database.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-database-sae5-x21
  namespace: ns-sae5-x21
  labels:
    component: database
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 3306
      targetPort: 3306
