k8s/svc-sfapi.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-sfapi-sae5-x21
  namespace: ns-sae5-x21
  labels:
    component: sfapi
spec:
  type: ClusterIP
  selector:
    component: sfapi
  ports:
    - port: 80
      targetPort: 9000
